--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "vee-validate": "^2.2.13",
+        "vue-router": "^3.0.7"
     }
 }
