--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "vee-validate": "^2.2.13",
-        "vue-router": "^3.0.7"
+        "vue-router": "^3.0.7",
+        "vuex": "^3.1.1"
     }
 }
